--- a/index.html
+++ b/index.html
@@ -204,6 +204,14 @@
                         <a href="https://mocha-space.github.io/Expense-Tracker/" target="_blank">Click Here!</a>
                   </div>
                 </div>
+                <div class="work">
+                  <img src="Expense Tracker image.jpg">
+                  <div class="layer">
+                    <h3>Music Player App</h3>
+                      <p>Enjoy Your Music using this Mini App.</p>
+                        <a href="https://mocha-space.github.io/Expense-Tracker/" target="_blank">Click Here!</a>
+                  </div>
+                </div>
               </div>
               <a href="#Contact" class="btn">Ping me for MORE!</a>
             </div>
