--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   <div class="layer">
                     <h3>Music Player App</h3>
                       <p>Enjoy Your Music using this Mini App.</p>
-                        <a href="https://mocha-space.github.io/Expense-Tracker/" target="_blank">Click Here!</a>
+                        <a href="https://mocha-space.github.io/Music-Mini-App/" target="_blank">Click Here!</a>
                   </div>
                 </div>
               </div>
