--- a/index.html
+++ b/index.html
@@ -212,6 +212,14 @@
                         <a href="https://mocha-space.github.io/Music-Mini-App/" target="_blank">Click Here!</a>
                   </div>
                 </div>
+                <div class="work">
+                  <img src="Dog music Image.jpg">
+                  <div class="layer">
+                    <h3>Music Player App</h3>
+                      <p>Enjoy Your Music using this Mini App.</p>
+                        <a href="https://mocha-space.github.io/Recipe-Finder/" target="_blank">Click Here!</a>
+                  </div>
+                </div>
               </div>
               <a href="#Contact" class="btn">Ping me for MORE!</a>
             </div>
