--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   </div>
                 </div>
                 <div class="work">
-                  <img src="Dog music Image.jpg">
+                  <img src="Recipe image.jpg">
                   <div class="layer">
                     <h3>Music Player App</h3>
                       <p>Enjoy Your Music using this Mini App.</p>
