--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 <div class="work">
                   <img src="Recipe image.jpg">
                   <div class="layer">
-                    <h3>Music Player App</h3>
-                      <p>Enjoy Your Music using this Mini App.</p>
+                    <h3>Recipe Generator</h3>
+                      <p>Generate any Recipe using any Ingredients you have.</p>
                         <a href="https://mocha-space.github.io/Recipe-Finder/" target="_blank">Click Here!</a>
                   </div>
                 </div>
